frontend/deploy-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 856019860811.dkr.ecr.us-east-1.amazonaws.com/frontend:5.0
        ports:
        - containerPort: 80
        resources:
          requests:
            memory: "4Mi"
            cpu: "5m"
          limits:
            memory: "10Mi"
            cpu: "5m"
        livenessProbe:
          exec:
            command:
            - cat
            - /usr/share/nginx/html/index.html
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 7
          periodSeconds: 3
