frontend/alb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-alb
spec:
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
  # type: LoadBalancer we dont need LB anymore for the Ingress, so this svc becomes a ClusterIP.
