frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  # annotations:
  #   nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: reviews.yaroslav.click
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-alb
            port:
              number: 80
